# linux_libnfc-nci

./: .gitignore  Makefile.am  README.md  bootstrap  configure.ac  libnfc-nci.pc.in
64bit_patch/: ROOT_src.patch
conf/: libnfc-nci.conf  libnfc-nxp-init.conf  libnfc-nxp-pn547.conf  libnfc-nxp-pn548.conf  libnfc-nxp.conf
conf/PN7120/: libnfc-brcm.conf  libnfc-nxp.conf
conf/PN7150/: libnfc-brcm.conf  libnfc-nxp.conf
debian/: changelog  control  copyright  libnfc-nci-data.install  libnfc-nci-demo.install  rules
debian/missing-sources/: jquery.js
demoapp/: main.c  tools.c  tools.h
doc/: Linux_NFC_API_Guide.html
doc/Linux_NFC_API_Guide/: annotated.html  classes.html  dir_0b9c1cb1a87bb63f6c6a31d464f49aac.html  dir_1231dc93fac70a382d0f29283bf15b5a.html  dir_1295056ee5a825a4e6c0a337fba7be5a.html  dir_2c9cd04c774acb8f1aba77c806f5de7d.html  dir_368cc57aa365afa91960d91433a25dfa.html  dir_3949347cc5cd3fdac4a04ba56a2a30f4.html  dir_6391e25f04aafeba1828b50713c067d7.html  dir_81a500ede81e932304ca36f935b22eca.html  dir_8f975f101acf478d376c5d6413452df5.html  dir_9de36964c70e7d7840eeecc286b1e43f.html  dir_aae49d94eaf48d0cb834f3f5af19650c.html  dir_b08aa15a91405abe24ff56b132932c82.html  dir_b9fbe2b0c6fd787ec4c9740ecb8cd92c.html  dir_d522931ffa1371640980b621734a4381.html  dir_dee8000dfb44dc2f167099826b421ce8.html  dir_ec5bdf2f063cd13a0d1d8aca7f8e2635.html  dir_f1b4da776fdd9c2a7dd7eb8517f90b75.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  linux__nfc__api_8h.html  linux__nfc__api_8h_source.html  linux__nfc__factory__api_8h.html  linux__nfc__factory__api_8h_source.html  main_8txt.html  menudata.js  nxp_logo.jfif  structndef__info__t-members.html  structndef__info__t.html  structnfc__btoob__pairing__t-members.html  structnfc__btoob__pairing__t.html  (+24 more)
doc/Linux_NFC_API_Guide/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js  typedefs_0.js  typedefs_1.js  (+15 more)
firmware/pn7160/: phDnldNfc_ImageInfo.cc  phDnldNfc_ImageInfo.h  phDnldNfc_UpdateSeq.cc  phDnldNfc_UpdateSeq_Old.cc
nxp-pn5xx-stub/: Kconfig  Makefile  README.md  pn5xx_i2c_stub.c  sample_devicetree.txt
src/android/utility/: macro.h
src/android/utility/android/: log.h
src/android/utility/android-base/: file.h  logging.h  parseint.h  properties.h  stringprintf.cpp  stringprintf.h  strings.h  utf8.h
src/android/utility/base/: file.cpp  logging.h  phNxpLogging.cpp  strings.cpp  utf8.cpp
src/android/utility/hardware/: hardware.h  nfc.h
src/android/utility/log/: log.h
src/halimpl/pn54x/common/: phNfcCommon.h  phNfcCompId.h  phNfcStatus.h  phNfcTypes.h
src/halimpl/pn54x/dnld/: phDnldNfc.c  phDnldNfc.h  phDnldNfc_Cmd.h  phDnldNfc_Internal.c  phDnldNfc_Internal.h  phDnldNfc_Status.h  phDnldNfc_Utils.c  phDnldNfc_Utils.h  phNxpNciHal_Dnld.c  phNxpNciHal_Dnld.h
src/halimpl/pn54x/hal/: phNxpNciHal.c  phNxpNciHal.h  phNxpNciHal_Kovio.c  phNxpNciHal_NfcDepSWPrio.c  phNxpNciHal_NfcDepSWPrio.h  phNxpNciHal_dta.c  phNxpNciHal_dta.h  phNxpNciHal_ext.c  phNxpNciHal_ext.h
src/halimpl/pn54x/inc/: phNxpNciHal_Adaptation.h  phNxpNciHal_Api.h  phNxpNciHal_SelfTest.h
src/halimpl/pn54x/log/: phNxpLog.c  phNxpLog.h
src/halimpl/pn54x/self-test/: phNxpNciHal_SelfTest.c
src/halimpl/pn54x/tml/: phDal4Nfc_messageQueueLib.c  phDal4Nfc_messageQueueLib.h  phOsalNfc_Timer.c  phOsalNfc_Timer.h  phTmlNfc.c  phTmlNfc_i2c.c  phTmlNfc_i2c.h
src/halimpl/pn54x/utils/: phNxpConfig.cpp  phNxpConfig.h  phNxpNciHal_utils.c  phNxpNciHal_utils.h
src/include/: linux_nfc_api.h  linux_nfc_api_compatibility.h  linux_nfc_factory_api.h
src/libnfc-nci/adaptation/: CrcChecksum.cpp  NfcAdaptation.cpp  OverrideLog.cpp  android_logmsg.cpp  config.cpp  libmain.c
src/libnfc-nci/gki/common/: gki.h  gki_buffer.c  gki_common.h  gki_debug.c  gki_inet.h  gki_time.c
src/libnfc-nci/gki/ulinux/: gki_int.h  gki_ulinux.c
src/libnfc-nci/hal/include/: nci_defs.h  nfc_hal_api.h  nfc_types.h
src/libnfc-nci/hal/int/: nfc_hal_int.h  nfc_hal_int_api.h  nfc_hal_nv_ci.h  nfc_hal_nv_co.h
src/libnfc-nci/include/: NfcAdaptation.h  OverrideLog.h  bt_target.h  bt_trace.h  bt_types.h  buildcfg.h  buildcfg_hal.h  dyn_mem.h  gki_target.h  hcidefs.h  nci_config.h  nfc_target.h  vendor_cfg.h
src/libnfc-nci/nfa/ce/: nfa_ce_act.c  nfa_ce_api.c  nfa_ce_main.c
src/libnfc-nci/nfa/cho/: nfa_cho_api.c  nfa_cho_main.c  nfa_cho_sm.c  nfa_cho_util.c
src/libnfc-nci/nfa/dm/: nfa_dm_act.c  nfa_dm_api.c  nfa_dm_cfg.c  nfa_dm_discover.c  nfa_dm_main.c  nfa_dm_ndef.c
src/libnfc-utils/cho/: ndef_cho_utils.cc
src/libnfc-utils/inc/: OverrideLog.h  configPathProvider.h
src/libnfc-utils/src/: ConfigPathProvider.cc  OverrideLog.cpp  android_logmsg.cpp  nfa_snep_act.cc  nfa_snep_api.cpp  nfa_snep_default.cc  nfa_snep_main.cc
src/nfcandroid_nfc_hidlimpl/1.1/: Nfc.cpp  Nfc.h  NxpNfcService.cpp  android.hardware.nfc@1.1-service.rc
src/nfcandroid_nfc_hidlimpl/1.2/: Nfc.cpp  Nfc.h  NxpNfcService.cpp
src/nxp_nci_hal_libnfc-nci/: run_unit_tests.sh
src/nxp_nci_hal_libnfc-nci/utils/: config.cc  ringbuffer.cc
src/nxp_nci_hal_nfc/: OWNERS
src/service/: linux_nfc_api.c  linux_nfc_api.cpp  linux_nfc_factory_api.c  linux_nfc_factory_api.cpp
src/service/interface/: NfcDefs.h  NfcTag.cpp  NfcTag.h  RoutingManager.cpp  RoutingManager.h  nativeNdef.cpp  nativeNdef.h  nativeNfcHandover.cpp  nativeNfcHandover.h  nativeNfcLlcp.cpp  nativeNfcLlcp.h  nativeNfcManager.cpp  nativeNfcManager.h  nativeNfcSnep.cpp  nativeNfcSnep.h  nativeNfcTag.cpp  nativeNfcTag.h
src/service/utils/: CondVar.cpp  IntervalTimer.cpp  Mutex.cpp  Mutex.h  SyncEvent.h
(+414 files in other folders)
